--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,104 @@
 /* You can add global styles to this file, and also import other style files */
+input[type="text"]{
+	width:100%;
+	padding:5px;
+	margin:5px;
+}
+
+/* For mobile phones: */
+.row::after {
+    content: "";
+    clear: both;
+    display: table;
+}
+[class*="col-"] {
+    float: left;
+    padding: 15px;
+    width: 100%;
+}
+@media only screen and (min-width: 600px) {
+    /* For tablets: */
+    .col-m-1 {width: 8.33%;}
+    .col-m-2 {width: 16.66%;}
+    .col-m-3 {width: 25%;}
+    .col-m-4 {width: 33.33%;}
+    .col-m-5 {width: 41.66%;}
+    .col-m-6 {width: 50%;}
+    .col-m-7 {width: 58.33%;}
+    .col-m-8 {width: 66.66%;}
+    .col-m-9 {width: 75%;}
+    .col-m-10 {width: 83.33%;}
+    .col-m-11 {width: 91.66%;}
+    .col-m-12 {width: 100%;}
+}
+@media only screen and (min-width: 768px) {
+    /* For desktop: */
+    .col-1 {width: 8.33%;}
+    .col-2 {width: 16.66%;}
+    .col-3 {width: 25%;}
+    .col-4 {width: 33.33%;}
+    .col-5 {width: 41.66%;}
+    .col-6 {width: 50%;}
+    .col-7 {width: 58.33%;}
+    .col-8 {width: 66.66%;}
+    .col-9 {width: 75%;}
+    .col-10 {width: 83.33%;}
+    .col-11 {width: 91.66%;}
+    .col-12 {width: 100%;}
+}
+
+* {
+    box-sizing: border-box;
+}
+body{
+	padding:0;
+	margin:0;
+	font-family: Arial, Helvetica, sans-serif;
+}
+
+header{
+	margin:0;
+	padding:0;
+	min-height: 50px;
+	color:white;
+	background-color: #2e8ac9;
+}
+
+.btn{
+	width:100%;
+	padding:5px;
+	margin:5px;
+	background-color: #009688;
+	border:none;
+	color:white;
+	cursor:pointer;
+}
+
+.btn:hover{
+	background-color: #038275;
+	font-weight: bold;
+}
+
+header a {
+	text-decoration: none;
+	text-transform: uppercase;
+	color:white;
+	font-weight: bold;
+}
+
+.container{
+	padding:20px;
+	margin:auto;
+}
+
+.alert{
+    width:100%;
+    padding:10px;
+    margin:10px;
+    color:black;
+    border-radius: 2px;
+}
+
+.alert-danger{
+    background-color: rgba(255, 0, 0, 0.7);
+}
